# Sentinel

./: .gitignore  README.md  SETUP.md  index.html  local-cloud.cjs  package-lock.json  package.json  sentinel-agent.cjs  vite.config.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  lib.rs  main.rs  network.rs  state.rs  sync.rs  ws.rs
src-tauri/src/db/: mod.rs  queries.rs
src/components/: DeviceList.jsx  StatusBadge.jsx  StorageBar.jsx  SyncLog.jsx
src/hooks/: useNetworkStatus.js  useStorageStats.js
src/lib/: bridge.js
