[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[lib]
name = "sentinel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (Phase 1)
rusqlite = { version = "0.31", features = [
    "bundled-sqlcipher-vendored-openssl",
] }
# NOTE: swap to rusqlite with "bundled-sqlcipher" once encryption is wired up

# Async runtime (Phase 2+)
tokio = { version = "1", features = ["full"] }

# WebSocket server (Phase 2)
tokio-tungstenite = "0.23"
futures-util = "0.3"

# Encryption (Phase 1 — AES-256-GCM)
aes-gcm = "0.10"
rand = "0.8"

# HTTP client for sync (Phase 4)
reqwest = { version = "0.12", features = ["json"] }

# Logging
log = "0.4"
tauri-plugin-log = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s" # optimise for binary size on Raspberry Pi

[profile.dev]
incremental = true
opt-level = 0
